@@ -45,6 +45,8 @@
 	- enable internal automagic dependency generation as default.
 	- fix: add rpmlib(VersionedDependencies) if versioned Provides: found.
 	- fix: add %%ifnarch noarch to debug_package macro.
+	- debug_packages "works", but non-noarch w/o %setup has empty payload.
+	- make dependency generation "opt-in" in order to build in distro.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
